syntax = "proto3";

option go_package = "./;proto";

package proto;

//message Empty {}

message Action {
  sint32 ActionNumber = 1;
}

message Balance {
  sint32 BalanceNumber = 1;
}

service BankService {
  rpc ModifyNumber(Action) returns (Balance);
//  rpc GetBalance(Empty) returns (Balance);
}